--- a/templates/today_bikes.html
+++ b/templates/today_bikes.html
@@ -9,20 +9,30 @@
 <body>
 <nav class="red lighten-1">
     <div class="nav-wrapper">
-        <a href="#" class="brand-logo center">Hand Off</a>
+        <a href="#" class="brand-logo center">Bikes for today</a>
     </div>
 </nav>
 <div class="section">
-  <ul class="container collection center">
+    <table>
+
+        <thead>
+        <tr>
+            <th>Plate</th>
+            <th>Hotel</th>
+            <th>Address</th>
+        </tr>
+        </thead>
+
+        <tbody>
         {% for o in orders %}
-            <li class="collection-item avatar">
-                <!--todo: go to bike page from here-->
-                <span class="title">
-                    Plate: <b>{{o.plate}}</b>
-                </span>
-            </li>
+        <tr>
+            <td><b><a href="/hand_off_bike/{{o.b_id}}"> {{o.plate}}</a></b></td>
+            <td>{{o.loc_name}}</td>
+            <td>{{o.loc_address}}</td>
+        </tr>
         {% endfor %}
-    </ul>
+        </tbody>
+    </table>
 </div>
 <script>
 
