--- a/templates/drop_off_bikes.html
+++ b/templates/drop_off_bikes.html
@@ -1,11 +1,5 @@
 <html lang="en">
-<head>
-    <title>Tabs VS Spaces</title>
-    <link rel="stylesheet"
-          href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-</head>
+{% include "head_include.html" %}
 <body>
 <nav class="red lighten-1">
     <div class="nav-wrapper">
