added screens for take bikes

--- a/templates/pickup_bike.html
+++ b/templates/pickup_bike.html
@@ -15,7 +15,7 @@
                 <td>Bike Plate</td>
                 <td><strong>{{form_data.plates}}</strong></td>
             </tr>
-            <tr>
+             <tr>
                 <td>Bike Name</td>
                 <td><strong>{{form_data.b_name}}</strong></td>
             </tr>
@@ -51,7 +51,7 @@
             </tbody>
         </table>
 
-        <input type="submit" value="Start Rental">
+        <input type="submit" value="End Rental">
     </form>
 
 </div>
