--- a/templates/pickup_bikes_list.html
+++ b/templates/pickup_bikes_list.html
@@ -20,7 +20,7 @@
         <tbody>
         {% for o in orders %}
         <tr>
-            <td><b><a href="/hand_off_bike/{{o.b_id}}"> {{o.plate}}</a></b></td>
+            <td><strong><a href="/hand_off_bike/{{o.b_id}}"> {{o.plate}}</a></strong></td>
             <td>{{o.loc_name}}</td>
             <td>{{o.loc_address}}</td>
         </tr>
