added admin and operator main pages. deleted extra code.

--- a/templates/pickup_bikes_list.html
+++ b/templates/pickup_bikes_list.html
@@ -3,7 +3,11 @@
 <body>
 <nav class="red lighten-1">
     <div class="nav-wrapper">
-        <a href="#" class="brand-logo center">Bikes for today</a>
+        <a href="#" class="brand-logo center">Bikes to pick up today</a>
+        <ul id="nav-mobile" class="right hide-on-med-and-down">
+            <li><a href="drop_off_bikes_list">Bikes to be dropped off</a></li>
+            <li><a href="/">Main</a></li>
+        </ul>
     </div>
 </nav>
 <div class="section">
