--- a/templates/available_bikes.html
+++ b/templates/available_bikes.html
@@ -4,6 +4,9 @@
 <nav class="red lighten-1">
     <div class="nav-wrapper">
         <a href="#" class="brand-logo center">available bikes</a>
+        <ul id="nav-mobile" class="right hide-on-med-and-down">
+            <li><a href="admin_main">Admin Main</a></li>
+        </ul>
     </div>
 </nav>
 <div class="section">
