added docker-compose; couple more todos link to create hotel

--- a/templates/admin_index.html
+++ b/templates/admin_index.html
@@ -25,6 +25,14 @@
             </div>
         </div>
     </div>
+      <div class="row center">
+        <div class="col s6 offset-s3">
+            <div class="card-panel">
+                <!--todo-->
+                <a href="/create_hotel">Create Hotel</a>
+            </div>
+        </div>
+    </div>
     <div class="row center">
         <div class="col s6 offset-s3">
             <div class="card-panel">
