fixes to admin index page

--- a/templates/admin_index.html
+++ b/templates/admin_index.html
@@ -12,7 +12,6 @@
     <div class="row center">
         <div class="col s6 offset-s3">
             <div class="card-panel">
-                <!--todo-->
                 <a href="/create_customer">Create Customer</a>
             </div>
         </div>
@@ -20,43 +19,38 @@
     <div class="row center">
         <div class="col s6 offset-s3">
             <div class="card-panel">
-                <!--todo-->
-                <a href="/create_bike">Create Bike</a>
-            </div>
-        </div>
-    </div>
-      <div class="row center">
-        <div class="col s6 offset-s3">
-            <div class="card-panel">
-                <!--todo-->
-                <a href="/create_hotel">Create Hotel</a>
+                <a href="/create_vehicle">Create Vehicle</a>
             </div>
         </div>
     </div>
     <div class="row center">
         <div class="col s6 offset-s3">
             <div class="card-panel">
-                <a href="pickup_bikes_list">Bikes to be picked up</a>
+                <a href="/create_location">Create Location</a>
             </div>
         </div>
     </div>
     <div class="row center">
         <div class="col s6 offset-s3">
             <div class="card-panel">
-                <a href="drop_off_bikes_list">Bikes to be dropped off</a>
+                <a href="pickup_vehicle_list">Vehicle to be picked up</a>
             </div>
         </div>
     </div>
     <div class="row center">
         <div class="col s6 offset-s3">
             <div class="card-panel">
-                <a href="available_bikes">Search available bikes</a>
+                <a href="drop_off_vehicle_list">Vehicle to be dropped off</a>
+            </div>
+        </div>
+    </div>
+    <div class="row center">
+        <div class="col s6 offset-s3">
+            <div class="card-panel">
+                <a href="available_vehicles">Search available Vehicle</a>
             </div>
         </div>
     </div>
 </div>
-<script>
-
-</script>
 </body>
 </html>
