--- a/templates/drop_off_bikes_list.html
+++ b/templates/drop_off_bikes_list.html
@@ -5,7 +5,7 @@
     <div class="nav-wrapper">
         <a href="#" class="brand-logo center">Bikes to drop off today</a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
-            <li><a href="pickup_bikes_list">Bikes to be picked up</a></li>
+            <li><a href="pickup_vehicle_list">Bikes to be picked up</a></li>
             <li><a href="/">Main</a></li>
         </ul>
     </div>
@@ -24,7 +24,7 @@
         <tbody>
         {% for o in orders %}
         <tr>
-            <td><b><a href="/hand_off_bike/{{o.b_id}}"> {{o.plate}}</a></b></td>
+            <td><b><a href="/hand_off_vehicle/{{o.b_id}}"> {{o.plate}}</a></b></td>
             <td>{{o.loc_name}}</td>
             <td>{{o.loc_address}}</td>
         </tr>
@@ -32,8 +32,5 @@
         </tbody>
     </table>
 </div>
-<script>
-
-</script>
 </body>
 </html>
