many fixes to application and templates

--- a/templates/admin_index.html
+++ b/templates/admin_index.html
@@ -51,6 +51,13 @@
             </div>
         </div>
     </div>
+    <div class="row center">
+        <div class="col s6 offset-s3">
+            <div class="card-panel">
+                <a href="order_list">All Orders</a>
+            </div>
+        </div>
+    </div>
 </div>
 </body>
 </html>
