--- a/templates/order_new.html
+++ b/templates/order_new.html
@@ -12,7 +12,7 @@
         <div class="row">
             <div class="input-field col s12">
                 <select name="bike-id">
-                    <option value="{{bike_data.id}}">
+                    <option selected value="{{bike_data.id}}">
                         {{bike_data.name}} || {{bike_data.plates}} || {{bike_data.l_name}}
                     </option>
 
