--- a/templates/orders_list.html
+++ b/templates/orders_list.html
@@ -27,7 +27,7 @@
         <tbody>
         {% for o in orders %}
         <tr>
-            <td><strong><a href="/view_order/{{o.order_id}}"> {{o.order_id}}</a></strong></td>
+            <td><strong><a href="/order_edit/{{o.order_id}}"> {{o.order_id}}</a></strong></td>
             <td>{{o.plate}}</td>
             <td>{{o.loc_name}}</td>
             <td>{{o.loc_address}}</td>
