--- a/templates/pickup_bike.html
+++ b/templates/pickup_bike.html
@@ -3,7 +3,7 @@
 <body>
 <nav class="red lighten-1">
     <div class="nav-wrapper">
-        <a href="#" class="brand-logo center">Hand off a bike</a>
+        <a href="#" class="brand-logo center">Pikup a bike from a customer</a>
     </div>
 </nav>
 <div class="section">
@@ -15,11 +15,13 @@
                 <td>Bike Plate</td>
                 <td><strong>{{form_data.plates}}</strong></td>
             </tr>
-             <tr>
+            <tr>
                 <td>Bike Name</td>
                 <td><strong>{{form_data.b_name}}</strong></td>
             </tr>
             <tr>
+                <!--todo: <critical> select date drop off-->
+                <!--todo: <critical> select date pickup -->
                 <td>Customer Name</td>
                 <td><strong>{{form_data.l_name}} {{form_data.f_name}}</strong></td>
             </tr>
@@ -32,9 +34,13 @@
                 <td><strong>{{form_data.loc_address}}</strong></td>
             </tr>
             <tr>
-                <!--todo: type in value-->
-                <td>Mileage at start</td>
+                <!--todo: <critical> type in value-->
+                <td>Mileage at start of the rental</td>
                 <td><strong>{{form_data.mileage}}</strong></td>
+            </tr>
+             <tr>
+                <td>Current Mileage</td>
+                <td><input value="" type="number" name="current-mileage" required></td>
             </tr>
             <tr>
                 <td>Rental Ends</td>
@@ -50,14 +56,10 @@
             </tr>
             </tbody>
         </table>
-
+        <input value="{{form_data.bike_id}}" name="bike-id" type="hidden">
         <input type="submit" value="End Rental">
     </form>
 
 </div>
-</div>
-<script>
-
-</script>
 </body>
 </html>
