pick up and dropoff screens misc fixes

--- a/templates/available_vehicles.html
+++ b/templates/available_vehicles.html
@@ -35,7 +35,7 @@
 
             <tr>
                 <td><strong>
-                    <a href="/fill_order/{{b.b_id}}">{{b.plate}}</a>
+                    <a href="/order_new/{{b.b_id}}">{{b.plate}}</a>
                 </strong></td>
                 <td>{{b.bike_name}}</td>
                 <td>{{b.loc_name}}</td>
