--- a/templates/order_edit.html
+++ b/templates/order_edit.html
@@ -30,8 +30,8 @@
             <input value="{{bike_data.mileage}}" name="bike-mileage" type="hidden">
         </div>
 
-        <!--todo: <feature> assign doff pp id-->
-        <!--todo: <feature> assign pup pp id-->
+        <!--todo: <feature> assign d-off pp id-->
+        <!--todo: <feature> assign p-up pp id-->
 
         <div class="row">
             <div class="input-field col s12">
