--- a/templates/order_new.html
+++ b/templates/order_new.html
@@ -3,8 +3,7 @@
 <body>
 <nav class="red lighten-1">
     <div class="nav-wrapper">
-        <!--TODO: ???-->
-        <a href="#" class="brand-logo center">Hand off a bike</a>
+        <a href="#" class="brand-logo center">New Order</a>
     </div>
 </nav>
 <div class="section">
@@ -28,8 +27,8 @@
             <input value="{{bike_data.mileage}}" name="bike-mileage" type="hidden">
         </div>
 
-        <!--todo: <feature> assign doff pp id-->
-        <!--todo: <feature> assign pup pp id-->
+        <!--todo: <feature> assign d-off pp id-->
+        <!--todo: <feature> assign p-up pp id-->
 
         <div class="row">
             <div class="input-field col s12">
