fixes renaming finishing touches

--- a/templates/available_vehicles.html
+++ b/templates/available_vehicles.html
@@ -3,7 +3,7 @@
 <body>
 <nav class="red lighten-1">
     <div class="nav-wrapper">
-        <a href="#" class="brand-logo center">available bikes</a>
+        <a href="#" class="brand-logo center">available vehicles</a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
             <li><a href="admin_main">Admin Main</a></li>
         </ul>
@@ -21,7 +21,7 @@
             <thead>
             <tr>
                 <th>Plate</th>
-                <th>Bike Name</th>
+                <th>Vehicle Name</th>
                 <th>Hotel</th>
                 <th>Address</th>
                 <th>Order Start</th>
@@ -37,7 +37,7 @@
                 <td><strong>
                     <a href="/order_new/{{b.b_id}}">{{b.plate}}</a>
                 </strong></td>
-                <td>{{b.bike_name}}</td>
+                <td>{{b.vehicle_name}}</td>
                 <td>{{b.loc_name}}</td>
                 <td>{{b.loc_address}}</td>
                 <td>{{b.o_start}}</td>
