--- a/templates/drop_off_vehicles_list.html
+++ b/templates/drop_off_vehicles_list.html
@@ -5,7 +5,7 @@
     <div class="nav-wrapper">
         <a href="#" class="brand-logo center">Vehicles to deliver to customers</a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
-            <li><a href="pickup_vehicle_list">Bikes to be picked up</a></li>
+            <li><a href="pickup_vehicle_list">vehicles to be picked up</a></li>
             <li><a href="/">Main</a></li>
         </ul>
     </div>
