--- a/templates/hand_off_vehicle.html
+++ b/templates/hand_off_vehicle.html
@@ -12,11 +12,11 @@
         <table>
             <tbody>
             <tr>
-                <td>Bike Plate</td>
+                <td>vehicle Plate</td>
                 <td><strong>{{form_data.plates}}</strong></td>
             </tr>
             <tr>
-                <td>Bike Name</td>
+                <td>vehicle Name</td>
                 <td><strong>{{form_data.b_name}}</strong></td>
             </tr>
             <tr>
@@ -53,7 +53,7 @@
             </tr>
             </tbody>
         </table>
-        <input value="{{form_data.bike_id}}" name="bike-id" type="hidden">
+        <input value="{{form_data.vehicle_id}}" name="vehicle-id" type="hidden">
         <input type="submit" value="Start Rental">
     </form>
 
