--- a/templates/index.html
+++ b/templates/index.html
@@ -10,14 +10,14 @@
     <div class="row center">
         <div class="col s6 offset-s3">
             <div class="card-panel">
-                <a href="pickup_vehicle_list">Bikes to be picked up</a>
+                <a href="pickup_vehicle_list">vehicles to be picked up</a>
             </div>
         </div>
     </div>
     <div class="row center">
         <div class="col s6 offset-s3">
             <div class="card-panel">
-                <a href="drop_off_vehicle_list">Bikes to be dropped off</a>
+                <a href="drop_off_vehicle_list">vehicles to be dropped off</a>
             </div>
         </div>
     </div>
