--- a/templates/order_edit.html
+++ b/templates/order_edit.html
@@ -12,13 +12,13 @@
 
         <div class="row">
             <div class="input-field col s12">
-                <select name="bike-id">
+                <select name="vehicle-id">
 
-                    <option selected value="{{bike_data.id}}">
-                        {{bike_data.name}} || {{bike_data.plates}} || {{bike_data.l_name}}
+                    <option selected value="{{vehicle_data.id}}">
+                        {{vehicle_data.name}} || {{vehicle_data.plates}} || {{vehicle_data.l_name}}
                     </option>
 
-                    {% for b in bikes %}
+                    {% for b in vehicles %}
                     <option value="{{b.id}}">
                         {{b.name}} || {{b.plates}} || {{b.l_name}}
                     </option>
@@ -26,12 +26,9 @@
 
                 </select>
             </div>
-            <input value="{{bike_data.l_id}}" name="bike-location-id" type="hidden">
-            <input value="{{bike_data.mileage}}" name="bike-mileage" type="hidden">
+            <input value="{{vehicle_data.l_id}}" name="vehicle-location-id" type="hidden">
+            <input value="{{vehicle_data.mileage}}" name="vehicle-mileage" type="hidden">
         </div>
-
-        <!--todo: <feature> assign d-off pp id-->
-        <!--todo: <feature> assign p-up pp id-->
 
         <div class="row">
             <div class="input-field col s12">
