fixes to template urls

--- a/templates/admin_index.html
+++ b/templates/admin_index.html
@@ -40,7 +40,7 @@
     <div class="row center">
         <div class="col s6 offset-s3">
             <div class="card-panel">
-                <a href="drop_off_vehicle_list">Vehicle to be dropped off</a>
+                <a href="drop_off_vehicles_list">Vehicle to be dropped off</a>
             </div>
         </div>
     </div>
