--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
     <div class="row center">
         <div class="col s6 offset-s3">
             <div class="card-panel">
-                <a href="drop_off_vehicle_list">vehicles to be dropped off</a>
+                <a href="drop_off_vehicles_list">vehicles to be dropped off</a>
             </div>
         </div>
     </div>
